// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCodecovBypassWorkflowYml - codecov-bypass .yml file added all default options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Code coverage increased
on:
  check_suite:
    types:
      - completed
  pull_request:
    types:
      - labelled
      - unlabeled
permissions: {}
jobs:
  code-coverage-increased:
    runs-on: ubuntu-latest
    if: github.event_name == 'check_suite' || github.event.check_suite.app.id == 254
    steps:
      - name: Check codecov results
        uses: time-loop/github-actions/dist/wrap-check-suite@wrap-check-suite+0.3.2
        env:
          FORCE_COLOR: 3
        with:
          github-app-id: \${{ secrets.CLICKUP_GITHUB_BOT_APP_ID }}
          github-private-key: \${{ secrets.CLICKUP_GITHUB_BOT_PRIVATE_KEY }}
          skip-label: code coverage not required
          check-name: Code coverage increased
          check-suite-app-id: 254
          check-suite-check-names: codecov/patch,codecov/project
          details-url: https://app.codecov.io/gh/\${{ github.repository }}/pull/<% prNumber %>
"
`;

exports[`addCodecovBypassWorkflowYml - codecov-bypass .yml file added all options provided 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: workflowName
on:
  check_suite:
    types:
      - completed
  pull_request:
    types:
      - labelled
      - unlabeled
permissions: {}
jobs:
  code-coverage-increased:
    runs-on: ubuntu-latest
    if: github.event_name == 'check_suite' || github.event.check_suite.app.id == 111
    steps:
      - name: Check codecov results
        uses: time-loop/github-actions/dist/wrap-check-suite@wrap-check-suite+0.3.2
        env:
          FORCE_COLOR: 3
        with:
          github-app-id: 222
          github-private-key: github-app-private-key
          skip-label: skipLabel
          check-name: checkName
          check-suite-app-id: 111
          check-suite-check-names: checkSuiteCheckName1,checkSuiteCheckName2
          details-url: some url
"
`;
